<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape"

    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/About_us"/>


    <TextView
        android:layout_margin="20sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/part_one"/>

    <TextView
        android:layout_margin="20sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/part_two"/>

    <TextView
        android:layout_margin="20sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/part_three"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Follow_us"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <androidx.appcompat.widget.LinearLayoutCompat

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30sp"
        android:layout_gravity="bottom"
        >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/icon_instagram" />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="30sp"
            android:src="@drawable/icon_facebook" />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="30sp"
            android:src="@drawable/icon_discord" />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="30sp"
            android:src="@drawable/icon_linkedin" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="?android:attr/listDivider" />
</androidx.appcompat.widget.LinearLayoutCompat>
